# site-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml  tests.yml
data/: test-post.md
src/: builder.rs  helpers.rs  logger.rs  main.rs
templates/: atom.hbs  entry.hbs  index.hbs  rss.hbs  style.hbs  tag-list.hbs
