[package]
name = "site-gen"
version = "2.0.0"
authors = ["Todd Kennedy <todd@selfassembled.org>"]
edition = "2021"
license = "Apache-2.0"
description = "A static site generator using Handlebars templates"
readme = "README.md"
repository = "https://github.com/toddself/site-gen"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.21.0"
voca_rs = "1.15.2"
handlebars = "5.1.0"
serde_json = "1.0.59"
truncate_string_at_whitespace = "1.0.1"
clap = "4.5.0"
color-eyre = "0.6.2"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
thiserror = "1.0.56"
url = { version = "2.5.0", features = ["serde"] }
env_logger = { version = "0.9.3" }
log = { version = "0.4.17", features = ["kv_unstable_serde"] }
